# Mu-Simulation

./: .gitignore  CMakeLists.txt  DetectorEncoding.md  GEANT4_LICENSE.txt  LICENSE  MCNET_GUIDELINES.txt  README.md  UnitConvention.md  UnitConvention.txt  install  simulation
analyses/: plotter.cc
cmake/modules/: FindHepMC.cmake  FindPythia8.cmake  FindROOT.cmake
include/: Analysis.hh  action.hh  analysis.hh  tracking.hh  ui.hh
include/action/: ActionInitialization.hh  EventAction.hh  GeneratorAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
include/analysis/: Analysis.hh  AnalysisManager.hh  HistoManager.hh
include/detector/: Construction.hh  DetectorConstruction.hh  DetectorMessenger.hh  Earth.hh  Flat.hh  PMT.hh  Prototype.hh  RPC.hh  RegionInfo.hh  ScintillatorEncoding.txt  TrackerSD.hh  TrapezoidCalorimeter.hh
include/geometry/: Box.hh  Cavern.hh  Construction.hh  Earth.hh  Flat.hh  MuonMapper.hh  Prototype.hh
include/physics/: BasicGenerator.hh  CORSIKAReaderGenerator.hh  Field.hh  FileReaderGenerator.hh  Filter.hh  Generator.hh  HepMCGenerator.hh  Particle.hh  PhysicsList.hh  Pythia8Generator.hh  PythiaGenerator.hh  Units.hh
include/tracking/: PrototypeHit.hh  TrackerHit.hh  Trajectory.hh  TrajectoryPoint.hh  TrapezoidHit.hh
include/ui/: Command.hh  Messenger.hh  VIS.hh
include/util/: CommandLineParser.hh  FileIO.hh  Time.hh  Types.hh  command_line_parser.hh  error.hh  io.hh  random.hh  stream.hh  string.hh  time.hh
scripts/: G4History.macro  digitize.py  gotodetector  gui.mac  init_vis.mac  looper.mac  mc_study.mac  muon_map.mac  muon_map_loop.mac  pythia1.mac  pythia2.mac  quiet.mac  run1.mac  run2.mac  sim50.mac  sim55.mac  sim60.mac  sim65.mac  sim_1.mac  simulation.in  startup.mac  super_run1.mac  super_run2.mac  test.mac  test1.mac  test2.mac  verbose.mac  verbosity.mac  view_detector  vis.mac
scripts/analysis/: helper.hh  muon.sh  muon_mapper.C  prototype_analysis.C
scripts/settings/: collision_view  front_view  init_gui  init_vis  quiet  verbose
scripts/studies/box/: background.mac  mathusla_signal.cmnd  signal.mac
scripts/views/: box_side_view  side_view
src/: analysis.cc  dump_geometry.cc  simulation.cc  tracking.cc
src/action/: ActionInitialization.cc  EventAction.cc  GeneratorAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
src/analysis/: Analysis.cc  AnalysisManager.cc  HistoManager.cc
src/detector/: Construction.cc  DetectorConstruction.cc  DetectorMessenger.cc  Earth.cc  Envelope.cc  Prototype.cc  RPC.cc  RegionInfo.cc  Scintillator.cc  TrackerSD.cc  TrapezoidCalorimeter.cc  TrapezoidROGeometry.cc  encoding.txt
src/detector/flat/: Flat.cc  Layer.cc  Scintillator.cc
src/detector/prototype/: Envelope.cc  Prototype.cc  RPC.cc  Scintillator.cc
src/geometry/: Cavern.cc  Construction.cc  Earth.cc  MuonMapper.cc
src/geometry/box/: Box.cc  Scintillator.cc
src/geometry/flat/: Flat.cc  Layer.cc  Scintillator.cc
src/geometry/prototype/: Envelope.cc  Prototype.cc  RPC.cc  Scintillator.cc  UChannel.cc
src/physics/: BasicGenerator.cc  CORSIKAReaderGenerator.cc  Field.cc  FileReaderGenerator.cc  Filter.cc  Generator.cc  HepMCGenerator.cc  Particle.cc  PhysicsList.cc  Pythia8Generator.cc  PythiaGenerator.cc  RangeGenerator.cc
src/tracking/: PrototypeHit.cc  TrackerHit.cc  Trajectory.cc  TrajectoryPoint.cc  TrapezoidHit.cc
src/ui/: Command.cc  Messenger.cc  VIS.cc
src/util/: CommandLineParser.cc  command_line_parser.cc
studies/: helper.hh  run
studies/box/background/: run  script.mac
studies/box/cosmics/corsika/: run  script.mac  test.mac
studies/box/cosmics/corsika/files/: DAT000001.root
studies/box/cosmics/muon/: analysis.C  run  script.mac
studies/box/signal/: electron.cmnd  muon.cmnd  run  script.mac  tau.cmnd  up.cmnd
studies/muon_map/: loop.mac  muon.sh  muon_mapper.C
studies/test_stand/: bbbar25_to_muon.cmnd  bbbar30_to_muon.cmnd  bbbar35_to_muon.cmnd  bbbar40_to_muon.cmnd  bbbar45_to_muon.cmnd  bbbar50_to_muon.cmnd  bbbar_to_muon.cmnd  ccbar25_to_muon.cmnd  ccbar30_to_muon.cmnd  ccbar35_to_muon.cmnd  ccbar40_to_muon.cmnd  ccbar45_to_muon.cmnd  ccbar50_to_muon.cmnd  ccbar_to_muon.cmnd  drell_yan_to_muon_high.cmnd  drell_yan_to_muon_low.cmnd  file_reader.mac  muon.cmnd  particle_parameters.tsv  pythia.mac  pythia_bbbar.mac  pythia_ccbar.mac  pythia_drell_yan_high.mac  pythia_drell_yan_low.mac  pythia_ttbar.mac  pythia_w.mac  pythia_w_tau.mac  pythia_z.mac  pythia_z_tau.mac  range.mac  run  script.mac  ttbar_to_muon.cmnd  w_to_muon.cmnd  w_to_tau_to_muon.cmnd  z_to_muon.cmnd  z_to_tau_to_muon.cmnd
